--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
 				 		 <span class="input-group-addon">
 				 			 <input type="checkbox" aria-label="...">
 				 		 </span>
-				 		 <input readonly type="text" class="form-control" value="Este enlace tendrá una previa redicción a publicidad">
+				 		 <input readonly type="text" class="form-control" value="Este enlace tendrá una previa redirección a publicidad">
 				 	 </div><!-- /input-group -->
 				  </div><!-- /.col-lg-4 -->
 				</br>
@@ -48,7 +48,7 @@
 					<div id="divPersonalizar" style="visibility: hidden;" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div  class="input-group" >
 						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">localhost:8080/</span>
-					 <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+					 <input type="text"  name="personalizada" class="form-control" id="basic-url" aria-describedby="basic-addon3">
 					</div><!-- /input-group -->
 					</div><!-- /.col-lg-4 -->
 				</form>
