--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -47,8 +47,8 @@
 <br />
 					<div id="divPersonalizar" style="visibility: hidden;" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div  class="input-group" >
-						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">localhost:8080/</span>
-					 <input type="text"  name="personalizada" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
+					 <input type="text"  name="personalizada" class="form-control" id="urlPerson" aria-describedby="basic-addon3">
 					</div><!-- /input-group -->
 					</div><!-- /.col-lg-4 -->
 				</form>
