--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -49,7 +49,13 @@
 						<div  class="input-group" >
 						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
 					 <input type="text"  name="personalizada" class="form-control" id="urlPerson" aria-describedby="basic-addon3">
+
 					</div><!-- /input-group -->
+					<br />
+					<div id="sugerencia"  />
+			 </div>
+			 <div id="sugerencias" class="btn-group" role="group" />
+			 </div>
 					</div><!-- /.col-lg-4 -->
 				</form>
 			</div>
