--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 				<form class="col-lg-12" role="form" id="shortener" action="">
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<input type="text" class="center-block form-control input-lg"
-							title="Enter a URL" placeholder="Enter a URL" name="url">
+							title="Enter a URL" placeholder="Enter a URL" id="url" name="url">
 						<span class="input-group-btn"><button
 								class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
 					</div>
@@ -48,7 +48,8 @@
 					<div id="divPersonalizar" style="visibility: hidden;" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div  class="input-group" >
 						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
-					 <input type="text"  name="personalizada" class="form-control" id="urlPerson" aria-describedby="basic-addon3">
+					 <input type="text"  name="personalizada" class="form-control" id="urlPerson" onkeyup="comprobarSugerencias(this)"
+					 aria-describedby="basic-addon3">
 
 					</div><!-- /input-group -->
 					<br />
