Creados HTML y JS de pagina de redireccion. Documentada clase controladora

--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -6,11 +6,8 @@
 <link rel="stylesheet" type="text/css"
 	href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
 <script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript"
-	src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/app.js">
-
-</script>
+<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
 	<div class="container-full">
@@ -44,7 +41,7 @@
 						 <input readonly type="text" class="form-control" value="Quiero personalizar mi url acortada">
 					 </div><!-- /input-group -->
 					</div><!-- /.col-lg-4 -->
-<br />
+					<br />
 					<div id="divPersonalizar" style="visibility: hidden;" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div  class="input-group" >
 						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
