--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
 				 		 <span class="input-group-addon">
 				 			 <input type="checkbox" aria-label="...">
 				 		 </span>
-				 		 <input readonly type="text" class="form-control" value="Este enlace tendrá una previa redirección a publicidad">
+				 		 <input readonly type="text" class="form-control" value="Este enlace tendrá una redirección a publicidad">
 				 	 </div><!-- /input-group -->
 				  </div><!-- /.col-lg-4 -->
 				</br>
