--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -1,59 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>URL Shortener</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css"
-	href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
-<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+	<title>URL Shortener</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
 	<div class="container-full">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h1>URL Shortener</h1>
-				<p class="lead">A front-end example page for the project</p>
-				<br>
+				<p class="lead">Feel free to shorten your URL!</p>
+				</br>
 				<form class="col-lg-12" role="form" id="shortener" action="">
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
-						<input type="text" class="center-block form-control input-lg"
-							title="Enter a URL" placeholder="Enter a URL" id="url" name="url">
-						<span class="input-group-btn"><button
-								class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
+						<input type="text" class="center-block form-control input-lg" title="Enter a URL" placeholder="Enter a URL" id="url" name="url">
+						<span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
 					</div>
-				</br>
+					</br>
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div class="input-group">
-				 		 <span class="input-group-addon">
-				 			 <input type="checkbox" aria-label="...">
-				 		 </span>
-				 		 <input readonly type="text" class="form-control" value="Este enlace tendrá una previa redirección a publicidad">
-				 	 </div><!-- /input-group -->
-				  </div><!-- /.col-lg-4 -->
-				</br>
+					 		<span class="input-group-addon">
+					 			<input type="checkbox" aria-label="..." name="disableAd">
+					 		</span>
+					 		<input readonly type="text" class="form-control" value="The shortened URL will not show an advertisement">
+					 	</div><!-- /input-group -->
+				  	</div><!-- /.col-lg-4 -->
+					</br>
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div class="input-group">
-						 <span class="input-group-addon">
-							 <input id="checkPersonalizar" onclick="personalizar()" type="checkbox" aria-label="...">
-						 </span>
-						 <input readonly type="text" class="form-control" value="Quiero personalizar mi url acortada">
-					 </div><!-- /input-group -->
+							<span class="input-group-addon">
+								<input id="checkPersonalizar" onclick="personalizar()" type="checkbox" aria-label="...">
+							</span>
+							<input readonly type="text" class="form-control" value="I want a custom URL tag">
+						</div><!-- /input-group -->
 					</div><!-- /.col-lg-4 -->
-					<br />
+					</br>
 					<div id="divPersonalizar" style="visibility: hidden;" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
-						<div  class="input-group" >
-						<span  id="divPersonalizar"  class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
-					 <input type="text"  name="personalizada" class="form-control" id="urlPerson" onkeyup="comprobarSugerencias(this)"
-					 aria-describedby="basic-addon3">
-
-					</div><!-- /input-group -->
-					<br />
-					<div id="sugerencia"  />
-			 </div>
-			 <div id="sugerencias" class="btn-group" role="group" />
-			 </div>
+						<div class="input-group">
+							<span id="divPersonalizar" class="input-group-addon" id="basic-addon3">http://localhost:8080/</span>
+							<input type="text"  name="customTag" class="form-control" id="urlPerson" onkeyup="comprobarSugerencias(this)" aria-describedby="basic-addon3">
+						</div><!-- /input-group -->
+						<br />
+						<div id="sugerencia"></div>
+						<div id="sugerencias" class="btn-group" role="group" /></div>
 					</div><!-- /.col-lg-4 -->
 				</form>
 			</div>
@@ -61,8 +54,8 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<div class="col-sm-offset-4 col-sm-4 text-center">
-					<br />
-					<div id="result" >
+					<br/>
+					<div id="result">
 					</div>
 				</div>
 			</div>
