Added Gmail, Twitter and Facebook users functionality to the front-end and the database

--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -24,11 +24,12 @@
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div class="input-group">
 					 		<span class="input-group-addon">
-					 			<input type="checkbox" aria-label="..." name="disableAd">
+					 			<input type="checkbox" aria-label="..." name="enableAd" id="enableAd">
 					 		</span>
-					 		<input readonly type="text" class="form-control" value="The shortened URL will not show an advertisement">
+					 		<input readonly type="text" class="form-control" value="The shortened URL will show an advertisement">
 					 	</div><!-- /input-group -->
 				  	</div><!-- /.col-lg-4 -->
+				  	<div id="authUsers" class="input-group input-group-lg col-sm-offset-4 col-sm-4"></div>
 					<br>
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<div class="input-group">
