--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -72,7 +72,11 @@
 		        	<a id="twitterLoginRedirect" href="/login/twitter/" class="btn btn-lg btn-info btn-block">Twitter</a>
 		        </div>
 		        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-		        	<a id="facebookLoginRedirect" href="/login/facebook/" class="btn btn-lg btn-primary btn-block">Facebook</a>
+		        	<!--<a id="facebookLoginRedirect" href="/login/facebook/" class="btn btn-lg btn-primary btn-block">Facebook</a>-->
+		        	<form action="/connect/facebook" method="POST">
+		        		<input type="hidden" name="scope" value="email">
+		        		<input type="submit" id="facebookLoginRedirect" class="btn btn-lg btn-primary btn-block">Facebook</a>
+		        	</form>
 		        </div>
 	        </div>
 	        <div class="col-sm-offset-4 col-xs-12 col-sm-4 col-md-4 col-lg-4">
