--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -66,10 +66,16 @@
 			</div>
 			<div class="col-sm-offset-4 col-xs-12 col-sm-4 col-md-4 col-lg-4">
 		        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-		        	<a id="gmailLoginRedirect" href="/login/gmail/" class="btn btn-lg btn-danger btn-block">Gmail</a>
+		        	<form id="googleLogin" action="/connect/google" method="POST">
+		        		<input type="hidden" name="scope" value="email">
+		        		<button type="submit" id="googleLoginRedirect" class="btn btn-lg btn-danger btn-block">Google</button>
+		        	</form>
 		        </div>
 		        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-		        	<a id="twitterLoginRedirect" href="/login/twitter/" class="btn btn-lg btn-info btn-block">Twitter</a>
+		        	<form id="twitterLogin" action="/connect/twitter" method="POST">
+		        		<input type="hidden" name="scope" value="email">
+		        		<button type="submit" id="twitterLoginRedirect" class="btn btn-lg btn-info btn-block">Twitter</button>
+		        	</form>
 		        </div>
 		        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 		        	<form id="facebookLogin" action="/connect/facebook" method="POST">
