--- a/heat-wave/src/main/resources/static/index.html
+++ b/heat-wave/src/main/resources/static/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>URL Shortener</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
-	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<script type="text/javascript" src="/webjars/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/app.js"></script>
 </head>
 <body>
 	<div class="container-full">
@@ -48,6 +48,19 @@
 						<br>
 						<div id="sugerencia"></div>
 						<div id="sugerencias" class="btn-group" role="group" /></div>
+					</div>
+					<br>
+					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+						<div class="input-group">
+					 		<span class="input-group-addon">
+					 			<input type="checkbox" aria-label="..." name="enableRule" id="enableRule">
+					 		</span>
+					 		<input readonly type="text" class="form-control" value="Add a rule to prove the URL correction">
+					 	</div>
+				  	</div>
+					<br>
+					<div id="rules" style="display: none" class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+						<textarea id="rule" rows="6" cols="30" name="rule" placeholder="Introduce a script"></textarea>
 					</div>
 				</form>
 			</div>
